@@ -356,6 +356,10 @@ release.
 
 - Minor optimization of TextAreaTransferHandler.canImport() method that
   is called when dragging things on the textArea (Matthieu Casanova)
+
+- jEdit now force drops from external applications to be COPY and not
+  MOVE drops. It prevents ftp explorer from deleting dropped files
+  (#1208598 - Matthieu Casanova)
 }}}
 
 }}}
